@@ -1,3 +1,4 @@
+
 1.3.x
 	Bug fixes:
 	* ldns-zplit output and error messages fixed (patch from Shane Kerr,
@@ -8,6 +9,14 @@
 	from Shane Kerr, bug id 189)
 	* Fixed potential buffer overflow in ldns_str2rdf_dname
 	* Signing code no longer signs delegation NS rrsets
+
+	API CHANGES:
+	* added 2str convenience functions:
+		- ldns_rr_type2str
+		- ldns_rr_class2str
+		- ldns_rr_type2buffer_str
+		- ldns_rr_class2buffer_str
+	* buffer2str() is now called ldns_buffer2str
 
 1.3
 	Base library:
